--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,45 @@
 /*body {
 	background-color: #FF0000;
 }*/
+
+body {
+	font-family: arial;
+}
+
+nav ul {
+	list-style: none;
+	padding-left: 0;
+}
+
+nav li a {
+	text-decoration: none;
+	text-transform: uppercase;
+	background-color: #e5005f;
+	color: white;
+	padding: 5px 15px;
+	margin: 2px 0;
+	display: inline-block;
+	font-size: larger;
+}
+
+nav li a:hover,
+#active {
+	background-color: black;
+}
+
+nav {
+	padding: 10px 0 0 10px;
+}
+
+nav > a {
+	display: block;
+	text-decoration: none;
+	color: black;
+	text-transform: uppercase;
+	margin-bottom: 10px;
+	font-weight: bold;
+}
+
+nav > a:hover {
+	color: #e5005f;
+}
