--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
 
 body {
 	font-family: arial;
+	padding-left: 230px;
 }
 
 nav ul {
@@ -30,6 +31,8 @@ nav li a:hover,
 nav {
 	padding: 10px 0 0 10px;
 	width: 225px;
+	position: fixed;
+	left: 10px;
 }
 
 nav > a {
@@ -43,4 +46,23 @@ nav > a {
 
 nav > a:hover {
 	color: #e5005f;
+}
+
+main aside p {
+	background-color: #eeeeee;
+	padding: 10px 20px;
+	margin-bottom: 25px;
+}
+
+main {
+	width: 40%;
+}
+
+hr {
+	border: none;
+	border-top: 1px solid #dddddd;
+}
+
+article img {
+	max-width: 100%;
 }
