--- a/css/styles.css
+++ b/css/styles.css
@@ -66,3 +66,70 @@ hr {
 article img {
 	max-width: 100%;
 }
+
+.related div{
+	width: 240px;
+	text-align: center;
+}
+
+.related:after {
+	content: '';
+	display: block;
+	clear: both;
+}
+
+.related div:nth-of-type(1) {
+	float: left;
+	margin-left: 45px;
+}
+
+.related div:nth-of-type(2) {
+	float: right;
+	margin-right: 45px;
+}
+
+.related img {
+	border-radius: 50%;
+}
+
+.related div a {
+	background-color: #e5005f;
+	display: block;
+	padding: 10px;
+	color: white;
+	text-transform: uppercase;
+	text-decoration: none;
+	margin-top: -30px;
+	position: relative;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+.related div a:hover {
+	background-color: black;
+}
+
+#scroll-left,
+#scroll-right {
+	font-size: 50px;
+	border: none;
+	background-color: transparent;
+	cursor: pointer;
+	outline: none;
+	color: #e5005f;
+	position: absolute;
+	top: 50%;
+}
+
+#scroll-left {
+	left: 0;
+}
+
+#scroll-right {
+	right: 0;
+}
+
+.related {
+	position: relative;
+}
