--- a/css/styles.css
+++ b/css/styles.css
@@ -133,3 +133,20 @@ article img {
 .related {
 	position: relative;
 }
+
+.related h1 {
+	background-color: white;
+	width: 100px;
+	text-align: center;
+	margin: 0 auto;
+	padding: 5px;
+	text-transform: uppercase;
+	position: relative;
+	z-index: 2;
+}
+
+.related hr {
+	position: relative;
+	top: -28px;
+	z-index: 1;
+}
