--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,10 @@ article img {
 	max-width: 100%;
 }
 
+article h1:hover {
+	text-decoration: underline;
+}
+
 .related div{
 	width: 240px;
 	text-align: center;
@@ -167,4 +171,31 @@ article img {
 #social a {
 	text-decoration: none;
 	color: inherit;
+}
+
+#newsletter p{
+	text-align: right;
+	padding-right: 80px;
+	font-weight: bold;
+}
+
+#newsletter {
+	background-color: #dddddd;
+	padding: 20px 0;
+	background-image: url(../img/envelope2.png);
+	background-repeat: no-repeat;
+	background-position: 30px center;
+}
+
+#newsletter a {
+	color: white;
+	text-decoration: none;
+	background-color: #e5005f;
+	padding: 10px;
+	text-transform: uppercase;
+	margin-left: 10px;
+}
+
+#newsletter a:hover {
+	background-color: black;
 }
